8/13/2024 i add about me
 i put "about me", but it´s no working well

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,3 +43,18 @@ figure{
     padding: 5%;
     background-repeat: no-repeat;
 }
+
+main{
+    display: flex;
+}
+
+main section h2{
+    flex: 1 0 50%;
+    display: block;
+}
+
+main section p{
+    flex: 1 0 50%;
+    display: block;
+    justify-content: end;
+}
