8/13/2024 i add a type of letter
i put a specify type of letter, and i center the p

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,9 @@ main{
 
 main section p{
     display: flex;
-    padding-left: 20%;
-    margin-top: 1%;
+    padding-left: 7%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding-right: 5%;
+    text-align: justify;
 }
 
