--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,21 +11,17 @@
 body{
     background-color: black;
     color: white;
-    
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-nav{
-    display: flex;
-}
-
- header{
-    /* position: fixed; */
+header{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    height: 10vh;
     background-color: var(--nav);
+    padding: 15px;
  }
+
 
  header h1 a{
     margin-top: 4%;
@@ -51,6 +47,10 @@ nav{
     font-size: 100%;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  }
+
+ nav{
+    display: flex;
+}
 
  header nav{
     flex: 1 0 50%;
@@ -122,7 +122,7 @@ footer{
 
 .firstImg{
     background: url(../images/screen.jpg);
-    background-size: contain;
+    background-size: cover;
     height: 57vh;
     width: 100%;
     background-repeat: no-repeat;
@@ -165,9 +165,10 @@ main section p{
 
 @media screen and (max-width: 768px) {
     /* Use flex-direction to stack the navbar, sidebar, and body */
-    header
-    nav {
+    nav ul {
+      display: flex;
       flex-direction: column;
+      align-items: flex-end;
     }
     /* Make the sidebar stack below the body */
     aside {
